We didn't acquire/release a BSound reference when playing using a BSoundPlayer which lead to #4825.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33705 a95241bf-73f2-0310-859d-f6bbb57e9c96